Sleep comand delete